--- a/scss/_headline.scss
+++ b/scss/_headline.scss
@@ -1,5 +1,26 @@
 @use 'variables' as var;
 
+@keyframes glow-sweep-wide {
+  0% {
+    transform: translate3d(-100%, 0, 0);
+    opacity: 0;
+  }
+
+  25% {
+    opacity: 1;
+  }
+
+  50% {
+    transform: translate3d(0%, 0, 0);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translate3d(100%, 0, 0);
+    opacity: 0;
+  }
+}
+
 @mixin headline-common($bg-height) {
   background-repeat: no-repeat;
   background-size: 100% $bg-height;
@@ -11,14 +32,24 @@
   margin: 1.2rem 0rem;
   scroll-margin-top: var.$menu-bar-height;
 
-  &:target {
-    &::before {
-      $shift: 1.25rem;
+  position: relative;
+  overflow: hidden;
 
-      display: inline-block;
-      content: '»';
-      margin-left: 0 - $shift;
-      width: $shift;
+  &:target {
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+
+      background: linear-gradient(to top, rgba(var.$color_pink, 0.4) 0%, rgba(var.$color_purple, 0) 70%);
+
+      transform: translate3d(-100%, 0, 0);
+      opacity: 0;
+
+      animation: glow-sweep-wide 1.2s cubic-bezier(.4, 0, .2, 1) forwards;
     }
   }
 }
