Should it be placed in the top-left corner even in the compact UI menu? 🥫

--- a/scss/_table-of-contents.scss
+++ b/scss/_table-of-contents.scss
@@ -84,7 +84,7 @@
 }
 
 .bottomtoc {
-  width: 80dvw;
+  width: calc(100dvw - 5rem);
 
   ::-webkit-scrollbar {
     height: var.$scrollbar-webkit-height;
