--- a/scss/general.scss
+++ b/scss/general.scss
@@ -65,7 +65,7 @@ body {
     height: var.$menu-bar-height;
     display: flex;
     align-items: center;
-    gap: 1rem;
+    gap: 0.8rem;
 
     background-color: var(--bg);
 
@@ -132,9 +132,8 @@ body {
 
   @media (max-width: var.$breakpoint-ui-wide) {
     position: fixed;
-
-    left: 0.1rem;
-    width: var.$sidebar-width;
+    top: 2.8rem;
+    height: calc(100dvh - 7rem);
     z-index: 50;
 
     @include utils.filter-glass();
@@ -146,7 +145,7 @@ main {
   margin: 0 0.8rem;
 
   @media (max-width: var.$breakpoint-ui-wide) {
-    margin-bottom: var.$pagetoc-bottom-shift;
+    margin: 1.6rem 0.8rem;
   }
 }
 
@@ -240,15 +239,11 @@ article {
     position: fixed;
     display: flex;
 
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 0.8rem;
+    gap: 0.4rem;
 
-    bottom: 4rem;
-    right: 0;
-
-    padding: 0.8rem 0.08rem;
+    padding: 0.4rem;
     z-index: 30;
 
     @include utils.filter-glass($radius: 1.6rem);
