--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -41,7 +41,7 @@
           <button popovertarget="theme-list" data-target="theme-selector" class="icon-button" title="Change theme" aria-label="Change theme" aria-haspopup="true" aria-expanded="false" aria-controls="theme-list">
             <div class="icon-theme fa-icon"></div>
           </button>
-          <button data-target="search" class="icon-button" title="Toggle Search Box (Shortkey: / )" aria-label="Toggle Search Box" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar">
+          <button data-target="search" class="icon-button" title="Toggle Search Box (Shortkey: / )" aria-label="Toggle Search Box" aria-expanded="false" aria-keyshortcuts="/" aria-controls="search-pop">
             <div class="icon-search fa-icon"></div>
           </button>
         </div>
@@ -90,7 +90,7 @@
         <button popovertarget="theme-list" data-target="theme-selector" class="icon-button" title="Change theme" aria-label="Change theme" aria-haspopup="true" aria-expanded="false" aria-controls="theme-list">
           <div class="icon-theme fa-icon"></div>
         </button>
-        <button data-target="search" class="icon-button" title="Toggle Search Box (Shortkey: / )" aria-label="Toggle Search Box" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar">
+        <button data-target="search" class="icon-button" title="Toggle Search Box (Shortkey: / )" aria-label="Toggle Search Box" aria-expanded="false" aria-keyshortcuts="/" aria-controls="search-pop">
           <div class="icon-search fa-icon"></div>
         </button>
       </aside>
