--- a/scss/_table-of-contents.scss
+++ b/scss/_table-of-contents.scss
@@ -1,6 +1,8 @@
 @use 'variables' as var;
 @use "utils" as utils;
 
+$toc-inline-offset: 5rem !default;
+
 @mixin anchor-gradient($angle) {
   color: var(--fg);
   text-decoration: none;
@@ -84,7 +86,7 @@
 }
 
 .bottomtoc {
-  width: calc(100dvw - 5rem);
+  inline-size: max(0px, calc(100svw - var(--toc-inline-offset, 5rem)));
 
   ::-webkit-scrollbar {
     height: var.$scrollbar-webkit-height;
