Extensive site-wide update 🐟 (#554)
* Extensive site-wide update 🐈

* Constantization of Breakpoints / Style Adjustment / Try incorporating animation 🐁

* Should it be placed in the top-left corner even in the compact UI menu? 🥫

* Save color themes for each system appearance 🎨

* “``apple-mobile-web-app-capable` appears to have been deprecated for quite some time...

* Restore DOM typings — tsconfig removed DOM but many files use DOM APIs

* fix: Same ordering bug at initialization.

* Fix search hotkey mismatch and aria-controls target.

* from "Nitpick comments"

* fix: Pointerdown listener leak when hiding via toggle/ESC.

* fix: Theme switching order causes flashes and uses fragile class detection.

* from many many "Nitpick comments"

* From the last “nitpick comments”

* Today is truly the very last time!

* Please, let this be the last time...!

* I forgot to delete the commented-out code...

--- a/scss/_table-of-contents.scss
+++ b/scss/_table-of-contents.scss
@@ -1,6 +1,8 @@
 @use 'variables' as var;
 @use "utils" as utils;
 
+$toc-inline-offset: 5rem !default;
+
 @mixin anchor-gradient($angle) {
   color: var(--fg);
   text-decoration: none;
@@ -84,7 +86,7 @@
 }
 
 .bottomtoc {
-  width: 80dvw;
+  inline-size: max(0px, calc(100svw - $toc-inline-offset));
 
   ::-webkit-scrollbar {
     height: var.$scrollbar-webkit-height;
