--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,6 +4,8 @@ $sidebar-width: 16rem;
 $pagetoc-width: 12rem;
 $pagetoc-bottom-shift: 2.4rem;
 
+$scrollbox-shift: $pagetoc-bottom-shift + 2rem;
+
 $scrollbar-webkit-width: 0.5rem;
 $scrollbar-webkit-height: 0.26rem;
 
