Improve `video` playback in the `Safari` 🧭
I want to address the issue where audio cuts out during video playback in Safari when Bluetooth audio is connected.

When I asked ChatGPT, it seems that “Safari video rendering load” and “Bluetooth audio processing load (AirPods Max)” are competing for resources on the same SoC. It also provided a surprisingly clear solution, so I'll give it a try!

--- a/scss/general.scss
+++ b/scss/general.scss
@@ -252,6 +252,15 @@ article {
     height: auto;
   }
 
+  video {
+    transform: none;
+    backface-visibility: visible;
+    contain: paint;
+
+    image-rendering: auto;
+    object-fit: contain;
+  }
+
   audio {
     display: flex;
     margin: 1rem auto;
