Minor adjustments and fixes to the `Google Tag Manager` code 🍇

--- a/theme/head.hbs
+++ b/theme/head.hbs
@@ -1,11 +1,7 @@
 <link rel="dns-prefetch" href="https://www.googletagmanager.com/">
 <link rel="preconnect" href="https://www.googletagmanager.com/" crossorigin>
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+Date.now(),event:'gtm.js'});const f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!=='dataLayer'?`&l=${l}`:'';j.async=true;j.src=
+`https://www.googletagmanager.com/gtm.js?id=${i}${dl}`;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WMN96QT');</script>
-
-<noscript>
-<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMN96QT" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-</noscript>
