--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -32,6 +32,9 @@
     <script type="module" src="{{ resource "book.js"}}" id="bookjs" data-pathtoroot="{{ path_to_root }}"></script>
   </head>
   <body>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMN96QT"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
     <header id="top-bar">
       <div id="menu" aria-label="Action menu">
         <div id="left-buttons">
