--- a/theme/head.hbs
+++ b/theme/head.hbs
@@ -1,5 +1,6 @@
 <link rel="dns-prefetch" href="https://www.googletagmanager.com/">
 <link rel="preconnect" href="https://www.googletagmanager.com/" crossorigin>
+<script>window.dataLayer=window.dataLayer||[];</script>
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 Date.now(),event:'gtm.js'});const f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!=='dataLayer'?`&l=${l}`:'';j.async=true;j.src=
