Overall structural reconstruction

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="{{ resource "css/general.css"}}">
     <link rel="preload" href="{{ resource "css/style.css"}}" as="style" onload="this.rel='stylesheet'">
 
-    <script type="module" src="{{ resource "book.js"}}"></script>
+    <script type="module" src="{{ resource "navigation.js"}}"></script>
   </head>
   <body>
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMN96QT"
