Improve the visibility and performance of the sidebar 🤹
- Adjust text color in light theme
- Improve performance in Chromium-based browsers
- Other minor visual adjustments

--- a/scss/catppuccin/au-lait.scss
+++ b/scss/catppuccin/au-lait.scss
@@ -11,7 +11,7 @@ $popup-colors: (
   --bg: #eff1f5;
   --fg: #4c4f69;
   --sidebar-bg: #e6e9ef;
-  --sidebar-fg: #4c4f69;
+  --sidebar-fg: #24273a;
   --sidebar-non-existant: #9ca0b0;
   --sidebar-active: #1e66f5;
   --sidebar-spacer: #9ca0b0;
