--- a/scss/catppuccin/latte.scss
+++ b/scss/catppuccin/latte.scss
@@ -11,7 +11,7 @@ $popup-colors: (
   --bg: #eff1f5;
   --fg: #4c4f69;
   --sidebar-bg: #e6e9ef;
-  --sidebar-fg: #4c4f69;
+  --sidebar-fg: #24273a;
   --sidebar-non-existant: #9ca0b0;
   --sidebar-active: #1e66f5;
   --sidebar-spacer: #9ca0b0;
